--- a/about/index.html
+++ b/about/index.html
@@ -94,7 +94,7 @@
 </ul>
 
 <p><a href="https://github.com/githublss">我的github</a><br />
-<a href="https://www.zhihu.com/people/li-sai-5-96/activities">我的知乎</a>
+<a href="https://www.zhihu.com/people/li-sai-5-96/activities">我的知乎</a><br />
 <a href="https://blog.csdn.net/li123_123_">csdn博客</a></p>
 
                         </div>
