--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
                                 在读研究生一名，对数据分析，可视化感兴趣，乐于分享
  写博客是对一个阶段学习的总结，也是一种知识的积累。不仅可以帮助自己，还可以帮到后面学习的人。多么希望本科的那个自己认识到这一点。
  希望自己也可以留下点什么东西。  我的github
-我的知乎 csdn博客……
+我的知乎
+csdn博客……
                             </div>
                             <p class="readmore"><a href="https://githublss.github.io/about/">阅读全文</a></p>
                         </article>
